--- a/EXERCISE REMOTE DATABASES/STUDENTS/styles.css
+++ b/EXERCISE REMOTE DATABASES/STUDENTS/styles.css
@@ -3,6 +3,12 @@ body{
     font-size: 20px;
 }
 
+#error-notification {
+    display: none;
+    border: 1px solid red;
+    color: black;
+}
+
 table{
     border:1px solid #234465;
     padding: 1%;
