--- a/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/details.hbs
+++ b/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/details.hbs
@@ -1,10 +1,10 @@
 {{> header}}
-
 <div class="offer-details">
     <h1>{{offer.brand}} {{offer.productName}}</h1>
     <div class="info">
         <img src="{{offer.imageUrl}}" alt="">
-        <div class="description">{{offer.description}}
+        <div class="description">
+            {{offer.description}}
             <br>
             <br>
             <p class="price">${{offer.price}}</p>
@@ -12,13 +12,15 @@
     </div>
     <div class="actions">
         {{#if offer.imTheSalesman}}
-        <a>Edit</a>
-        <a>Delete</a>
+        <a href="#/edit/{{offer.id}}">Edit</a>
+        <a href="#/delete/{{offer.id}}">Delete</a>
         {{else}}
-        <a>Buy</a>
+            {{#if offer.imInTheClientsList}}
+            <span>You bought it</span>
+            {{else}}
+            <a href="/buy/{{offer.id}}">Buy</a>
+            {{/if}}
         {{/if}}
-        <span>You bought it</span>
     </div>
 </div>
-
 {{> footer}}
