--- a/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/home.hbs
+++ b/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/home.hbs
@@ -1,37 +1,29 @@
 {{> header}}
-
-<div class="container">
     {{#if isLoggedIn}}
-    <div class="shoes">
-
-        {{#each offers}}
-
-        <div class="shoe">
-            <img src="{{this.imageUrl}}">
-            <h3>{{this.productName}}</h3>
-            <a href="/details/{{ id }}">Buy it for ${{this.price}}</a>
+    <div class="container">
+        <div class="shoes">
+            {{#each offers}}
+                <div class="shoe">
+                    <img src="{{this.imageUrl}}">
+                    <h3>{{this.productName}}</h3>
+                    <a href="#/details/{{id}}">Buy it for ${{this.price}}</a>
+                </div>
+            {{else}}
+                <h1>No shoes to display. Be the first to create a new offer...</h1>
+            {{/each}}
         </div>
-
-        {{else}}
-
-        <h1>No shoes to display. Be the first to create a new offer...</h1>
-
-        {{/each}}
     </div>
-
     {{else}}
-
-    <div class="about-us">
-        <div>
-            <img src="../public/shoes.jpg" alt="">
-            <img src="../public/shoes2.jpg" alt="">
+    <div class="container">
+        <div class="about-us">
+            <div>
+                <img src="../public/shoes.jpg" alt="">
+                <img src="../public/shoes2.jpg" alt="">
+            </div>
+            <p>
+                <a href="#/register">Register Now</a> and Try it!
+            </p>
         </div>
-        <p>
-            <a href="/register">Register Now</a> and Try it!
-        </p>
-    </div>
-
+    </div>  
     {{/if}}
-</div>
-
 {{> footer}}
