--- a/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/login.hbs
+++ b/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/login.hbs
@@ -2,7 +2,7 @@
 
 <h1>Login</h1>
 <p class="form-info">Don't have account?
-    <a href="/register">Register now</a> and fix that!
+    <a href="#/register">Register now</a> and fix that!
 </p>
 <form action="/login" method="POST">
     <div>
