--- a/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/register.hbs
+++ b/Shoe-Shelf-exam/JS_App_Retake_Resourses/templates/register.hbs
@@ -2,7 +2,7 @@
 
 <h1>Register</h1>
 <p class="form-info">Already registered?
-    <a href="/login">Login now</a> and have some fun!
+    <a href="#/login">Login now</a> and have some fun!
 </p>
 
 <form action="/register" method="POST">
