--- a/Shoe-Shelf-exam/JS_App_Retake_Resourses/partials/header.hbs
+++ b/Shoe-Shelf-exam/JS_App_Retake_Resourses/partials/header.hbs
@@ -3,19 +3,19 @@
         <ul>
             {{#if isLoggedIn}}
             <li>
-                <a href="/create-offer">Create new offer</a>
+                <a href="#/create-offer">Create new offer</a>
             </li>
             {{/if}}
             <li class="site-logo">Shoe</li>
             <li>
-                <a href="/home">
+                <a href="#/home">
                     <img src="../public/sneakers.png" alt="">
                 </a>
             </li>
             <li class="site-logo">Shelf</li>
             {{#if isLoggedIn}}
             <li>Welcome, {{userEmail}} |
-                <a href="/logout">Logout</a>
+                <a href="#/logout">Logout</a>
             </li>
             {{/if}}
         </ul>
