--- a/SoftWiki-exam/templates/edit.hbs
+++ b/SoftWiki-exam/templates/edit.hbs
@@ -1,22 +1,21 @@
-{{> header}}
-
+{{>header}}
 <div class="container">
 
     <form action="#/edit/{{article.id}}" method="POST">
         <fieldset>
             <legend>Edit article</legend>
             <p class="field title">
-                <input type="text" name="title" id="title" placeholder="Arrays" value="{{article.title}}">
+                <input type="text" name="title" id="title" value="{{article.title}}">
                 <label for="title">Title:</label>
             </p>
 
             <p class="field category">
-                <input type="text" name="category" id="category" placeholder="JavaScript" value="{{article.category}}">
+                <input type="text" name="category" id="category" value="{{article.category}}">
                 <label for="category">Category:</label>
             </p>
             <p class="field content">
                 <textarea name="content" id="content">{{article.content}}</textarea>
-                <label for="content">Content:</label>
+                <label for="content">Content: </label>
             </p>
 
             <p class="field submit">
@@ -26,5 +25,4 @@
         </fieldset>
     </form>
 </div>
-
-{{> footer}}
+{{>footer}}
