--- a/SoftWiki-exam/templates/login.hbs
+++ b/SoftWiki-exam/templates/login.hbs
@@ -1,7 +1,6 @@
-{{> header}}
-
+{{>header}}
 <div class="container auth">
-    <form action="/login" method="POST">
+    <form action="#/login" method="POST">
         <fieldset>
             <legend>Login</legend>
             <blockquote>Knowledge is like money: to be of value it must circulate, and in circulating it can increase in
@@ -23,5 +22,4 @@
         </fieldset>
     </form>
 </div>
-
-{{> footer}}
+{{>footer}}
